--- a/TeamPi_6968_DeepSpace/TeamPi_6968_DeepSpace/.vscode/settings.json
+++ b/TeamPi_6968_DeepSpace/TeamPi_6968_DeepSpace/.vscode/settings.json
@@ -59,5 +59,6 @@
     "typeinfo": "cpp",
     "utility": "cpp",
     "*.inc": "cpp"
-  }
+  },
+  "C_Cpp.default.configurationProvider": "vscode-wpilib"
 }
