--- a/TeamPi_6968_DeepSpace/TeamPi_6968_DeepSpace/.vscode/settings.json
+++ b/TeamPi_6968_DeepSpace/TeamPi_6968_DeepSpace/.vscode/settings.json
@@ -58,7 +58,29 @@
     "tuple": "cpp",
     "typeinfo": "cpp",
     "utility": "cpp",
-    "*.inc": "cpp"
+    "*.inc": "cpp",
+    "algorithm": "cpp",
+    "ios": "cpp",
+    "iterator": "cpp",
+    "list": "cpp",
+    "map": "cpp",
+    "set": "cpp",
+    "string": "cpp",
+    "xthread": "cpp",
+    "xfacet": "cpp",
+    "xhash": "cpp",
+    "xiosbase": "cpp",
+    "xlocale": "cpp",
+    "xlocinfo": "cpp",
+    "xlocnum": "cpp",
+    "xmemory": "cpp",
+    "xmemory0": "cpp",
+    "xstddef": "cpp",
+    "xstring": "cpp",
+    "xtr1common": "cpp",
+    "xtree": "cpp",
+    "xutility": "cpp",
+    "complex": "cpp"
   },
   "C_Cpp.default.configurationProvider": "vscode-wpilib"
 }
