--- a/TeamPi_6968_DeepSpace/TeamPi_6968_DeepSpace/.vscode/settings.json
+++ b/TeamPi_6968_DeepSpace/TeamPi_6968_DeepSpace/.vscode/settings.json
@@ -80,7 +80,11 @@
     "xtr1common": "cpp",
     "xtree": "cpp",
     "xutility": "cpp",
-    "complex": "cpp"
+    "complex": "cpp",
+    "iomanip": "cpp",
+    "stack": "cpp",
+    "xlocmon": "cpp",
+    "xloctime": "cpp"
   },
   "C_Cpp.default.configurationProvider": "vscode-wpilib"
 }
