New Wiring Code

--- a/TeamPi_6968_DeepSpace/TeamPi_6968_DeepSpace/.vscode/settings.json
+++ b/TeamPi_6968_DeepSpace/TeamPi_6968_DeepSpace/.vscode/settings.json
@@ -84,7 +84,9 @@
     "iomanip": "cpp",
     "stack": "cpp",
     "xlocmon": "cpp",
-    "xloctime": "cpp"
+    "xloctime": "cpp",
+    "bitset": "cpp",
+    "numeric": "cpp"
   },
   "C_Cpp.default.configurationProvider": "vscode-wpilib"
 }
